force-app/main/default/objects/Trigger_Setting__mdt/fields/Alt_Object_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>Alt_Object_Api_Name__c</fullName>
    <inlineHelpText>Include the API Name of the Trigger Object here if it does not appear in the drop down</inlineHelpText>
    <label>Alt Object Api Name</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>