force-app/main/default/objects/Trigger_Setting__mdt/fields/Before_Update__c.field-meta.xml
<CustomField>
    <fullName>Before_Update__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Before Update</label>
    <type>Checkbox</type>
</CustomField>