force-app/main/default/objects/Trigger_Setting__mdt/fields/Bypass_Permission_Name__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Permission_Name__c</fullName>
    <description>Name of the custom permission used to bypass trigger for certain users/personas</description>
    <inlineHelpText>Name of the custom permission used to bypass trigger for certain users/personas</inlineHelpText>
    <label>Bypass Permission Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>