force-app/main/default/objects/Trigger_Setting__mdt/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Active?</label>
    <type>Checkbox</type>
</CustomField>