force-app/main/default/objects/Trigger_Setting__mdt/fields/Triggering_Object__c.field-meta.xml
<CustomField>
    <fullName>Triggering_Object__c</fullName>
    <label>Triggering Object</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Trigger_Settings</relationshipLabel>
    <relationshipName>Trigger_Settings</relationshipName>
    <type>MetadataRelationship</type>
    <unique>true</unique>
</CustomField>