force-app/main/default/objects/Trigger_Setting__mdt/validationRules/Object_Name_Requred.validationRule-meta.xml
<ValidationRule>
    <fullName>Object_Name_Requred</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
	IsActive__c,
	ISBLANK( Triggering_Object__c ),
	ISBLANK( Alt_Object_Api_Name__c  )
)</errorConditionFormula>
    <errorDisplayField>Triggering_Object__c</errorDisplayField>
    <errorMessage>Please select either a Triggering Object or input an Alternate Object API Name</errorMessage>
</ValidationRule>