force-app/main/default/objects/Trigger_Setting__mdt/listViews/All_Trigger_Settings.listView-meta.xml
<ListView>
    <fullName>All_Trigger_Settings</fullName>
    <columns>MasterLabel</columns>
    <columns>Triggering_Object__c</columns>
    <columns>Alt_Object_Api_Name__c</columns>
    <columns>IsActive__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Trigger Settings</label>
</ListView>